--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll": "^1.9.0",
     "throttle-debounce": "^5.0.0",
     "yup": "^1.3.2"
   },
