--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5",
     "throttle-debounce": "^5.0.0",
     "yup": "^1.3.2"
   },
