--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "formik": "^2.4.5",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.0.5",
     "throttle-debounce": "^5.0.0",
     "yup": "^1.3.2"
   },
